--- a/J5/form.phtml
+++ b/J5/form.phtml
@@ -12,7 +12,7 @@
     </head>
     <body id="form">
         <main>
-            <form method="get" action="cv.phtml">
+            <form method="get" action="index.php">
                 <section>
                     <h3>
                         Informations
